infrastructure/registry/11-registry-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: registry
spec:
  selector:
    app: registry-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
